gen/PascalParser.py
# Generated from D:/antlr4/sample\Pascal.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PascalParser ( Parser ):

    grammarFileName = "Pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'var'", "'integer'", "'int64'", 
                     "'real'", "'string'", "'begin'", "'end'", "'writeln'", 
                     "'readln'", "';'", "':'", "','", "'.'", "'('", "')'", 
                     "':='", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SEMI", "COLON", 
                      "COMMA", "DOT", "LPAREN", "RPAREN", "ASSIGN", "PLUS", 
                      "MINUS", "MUL", "SLASH", "DIV", "MOD", "ID", "CONST_INT", 
                      "CONST_STR", "WS", "COMMENT1", "COMMENT2" ]

    RULE_program = 0
    RULE_infoPart = 1
    RULE_variableDeclarationPart = 2
    RULE_variableDeclaration = 3
    RULE_identifierList = 4
    RULE_varType = 5
    RULE_block = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_writelnReadln = 9
    RULE_readln = 10
    RULE_writeln = 11
    RULE_assignmentStatement = 12
    RULE_expressions = 13
    RULE_expression = 14
    RULE_operators = 15
    RULE_blockBody = 16

    ruleNames =  [ "program", "infoPart", "variableDeclarationPart", "variableDeclaration", 
                   "identifierList", "varType", "block", "statements", "statement", 
                   "writelnReadln", "readln", "writeln", "assignmentStatement", 
                   "expressions", "expression", "operators", "blockBody" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    SEMI=11
    COLON=12
    COMMA=13
    DOT=14
    LPAREN=15
    RPAREN=16
    ASSIGN=17
    PLUS=18
    MINUS=19
    MUL=20
    SLASH=21
    DIV=22
    MOD=23
    ID=24
    CONST_INT=25
    CONST_STR=26
    WS=27
    COMMENT1=28
    COMMENT2=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(PascalParser.DOT, 0)

        def infoPart(self):
            return self.getTypedRuleContext(PascalParser.InfoPartContext,0)


        def variableDeclarationPart(self):
            return self.getTypedRuleContext(PascalParser.VariableDeclarationPartContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PascalParser.T__0:
                self.state = 34
                self.infoPart()


            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PascalParser.T__1:
                self.state = 37
                self.variableDeclarationPart()


            self.state = 40
            self.block()
            self.state = 41
            self.match(PascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfoPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_infoPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfoPart" ):
                listener.enterInfoPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfoPart" ):
                listener.exitInfoPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfoPart" ):
                return visitor.visitInfoPart(self)
            else:
                return visitor.visitChildren(self)




    def infoPart(self):

        localctx = PascalParser.InfoPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_infoPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(PascalParser.T__0)
            self.state = 45 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 44
                    self.matchWildcard()

                else:
                    raise NoViableAltException(self)
                self.state = 47 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 49
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(PascalParser.VariableDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.SEMI)
            else:
                return self.getToken(PascalParser.SEMI, i)

        def getRuleIndex(self):
            return PascalParser.RULE_variableDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationPart" ):
                listener.enterVariableDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationPart" ):
                listener.exitVariableDeclarationPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarationPart" ):
                return visitor.visitVariableDeclarationPart(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarationPart(self):

        localctx = PascalParser.VariableDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclarationPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(PascalParser.T__1)
            self.state = 52
            self.variableDeclaration()
            self.state = 57
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.match(PascalParser.SEMI)
                    self.state = 54
                    self.variableDeclaration() 
                self.state = 59
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 60
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(PascalParser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(PascalParser.VarTypeContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = PascalParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.identifierList()
            self.state = 63
            self.match(PascalParser.COLON)
            self.state = 64
            self.varType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.ID)
            else:
                return self.getToken(PascalParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.COMMA)
            else:
                return self.getToken(PascalParser.COMMA, i)

        def getRuleIndex(self):
            return PascalParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = PascalParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(PascalParser.ID)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PascalParser.COMMA:
                self.state = 67
                self.match(PascalParser.COMMA)
                self.state = 68
                self.match(PascalParser.ID)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PascalParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = PascalParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PascalParser.T__2) | (1 << PascalParser.T__3) | (1 << PascalParser.T__4) | (1 << PascalParser.T__5))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(PascalParser.StatementsContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PascalParser.T__6)
            self.state = 77
            self.statements()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PascalParser.SEMI:
                self.state = 78
                self.match(PascalParser.SEMI)


            self.state = 81
            self.match(PascalParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.StatementContext)
            else:
                return self.getTypedRuleContext(PascalParser.StatementContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.SEMI)
            else:
                return self.getToken(PascalParser.SEMI, i)

        def getRuleIndex(self):
            return PascalParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PascalParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.statement()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    self.match(PascalParser.SEMI)
                    self.state = 85
                    self.statement() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def writelnReadln(self):
            return self.getTypedRuleContext(PascalParser.WritelnReadlnContext,0)


        def readln(self):
            return self.getTypedRuleContext(PascalParser.ReadlnContext,0)


        def writeln(self):
            return self.getTypedRuleContext(PascalParser.WritelnContext,0)


        def block(self):
            return self.getTypedRuleContext(PascalParser.BlockContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(PascalParser.AssignmentStatementContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PascalParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.writelnReadln()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.readln()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.writeln()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.assignmentStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WritelnReadlnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.LPAREN)
            else:
                return self.getToken(PascalParser.LPAREN, i)

        def CONST_STR(self):
            return self.getToken(PascalParser.CONST_STR, 0)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.RPAREN)
            else:
                return self.getToken(PascalParser.RPAREN, i)

        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_writelnReadln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWritelnReadln" ):
                listener.enterWritelnReadln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWritelnReadln" ):
                listener.exitWritelnReadln(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWritelnReadln" ):
                return visitor.visitWritelnReadln(self)
            else:
                return visitor.visitChildren(self)




    def writelnReadln(self):

        localctx = PascalParser.WritelnReadlnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_writelnReadln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PascalParser.T__8)
            self.state = 99
            self.match(PascalParser.LPAREN)
            self.state = 100
            self.match(PascalParser.CONST_STR)
            self.state = 101
            self.match(PascalParser.RPAREN)
            self.state = 102
            self.match(PascalParser.SEMI)
            self.state = 103
            self.match(PascalParser.T__9)
            self.state = 104
            self.match(PascalParser.LPAREN)
            self.state = 105
            self.match(PascalParser.ID)
            self.state = 106
            self.match(PascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadlnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_readln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadln" ):
                listener.enterReadln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadln" ):
                listener.exitReadln(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadln" ):
                return visitor.visitReadln(self)
            else:
                return visitor.visitChildren(self)




    def readln(self):

        localctx = PascalParser.ReadlnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_readln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PascalParser.T__9)
            self.state = 109
            self.match(PascalParser.LPAREN)
            self.state = 110
            self.identifierList()
            self.state = 111
            self.match(PascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WritelnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def expressions(self):
            return self.getTypedRuleContext(PascalParser.ExpressionsContext,0)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_writeln

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteln" ):
                listener.enterWriteln(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteln" ):
                listener.exitWriteln(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteln" ):
                return visitor.visitWriteln(self)
            else:
                return visitor.visitChildren(self)




    def writeln(self):

        localctx = PascalParser.WritelnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_writeln)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(PascalParser.T__8)
            self.state = 114
            self.match(PascalParser.LPAREN)
            self.state = 115
            self.expressions()
            self.state = 116
            self.match(PascalParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PascalParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = PascalParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PascalParser.ID)
            self.state = 119
            self.match(PascalParser.ASSIGN)
            self.state = 120
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PascalParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.COMMA)
            else:
                return self.getToken(PascalParser.COMMA, i)

        def getRuleIndex(self):
            return PascalParser.RULE_expressions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressions" ):
                listener.enterExpressions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressions" ):
                listener.exitExpressions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressions" ):
                return visitor.visitExpressions(self)
            else:
                return visitor.visitChildren(self)




    def expressions(self):

        localctx = PascalParser.ExpressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expressions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.expression()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PascalParser.COMMA:
                self.state = 123
                self.match(PascalParser.COMMA)
                self.state = 124
                self.expression()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PascalParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def CONST_INT(self):
            return self.getToken(PascalParser.CONST_INT, 0)

        def CONST_STR(self):
            return self.getToken(PascalParser.CONST_STR, 0)

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def operators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.OperatorsContext)
            else:
                return self.getTypedRuleContext(PascalParser.OperatorsContext,i)


        def getRuleIndex(self):
            return PascalParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = PascalParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.LPAREN]:
                self.state = 130
                self.match(PascalParser.LPAREN)
                self.state = 131
                self.expression()
                self.state = 132
                self.match(PascalParser.RPAREN)
                pass
            elif token in [PascalParser.CONST_INT]:
                self.state = 134
                self.match(PascalParser.CONST_INT)
                pass
            elif token in [PascalParser.CONST_STR]:
                self.state = 135
                self.match(PascalParser.CONST_STR)
                pass
            elif token in [PascalParser.ID]:
                self.state = 136
                self.match(PascalParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.operators()
                    self.state = 140
                    self.expression() 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIV(self):
            return self.getToken(PascalParser.DIV, 0)

        def MOD(self):
            return self.getToken(PascalParser.MOD, 0)

        def PLUS(self):
            return self.getToken(PascalParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PascalParser.MINUS, 0)

        def MUL(self):
            return self.getToken(PascalParser.MUL, 0)

        def SLASH(self):
            return self.getToken(PascalParser.SLASH, 0)
